tests/machine/x/ocaml/sort_stable.error
stage: compile
error:
File "/workspace/mochi/tests/machine/x/ocaml/sort_stable.ml", line 26, characters 0-16:
26 | List.rev !__res0)
     ^^^^^^^^^^^^^^^^
Error: This expression has type string list
       but an expression was expected of type Obj.t list
       Type string is not compatible with type Obj.t 


Context (around line 26):
  24 |       __res0 := i.v :: !__res0;
  25 |   ) items;
  26 | List.rev !__res0)
  27 | 
  28 | 
